# yew-github-pages

./: Cargo.toml  README.md  yew-mytemplate-c832fbfd58ee7127.js  yew-mytemplate-c832fbfd58ee7127_bg.wasm
src/: main.rs
