[package]
name = "yew-mytemplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features=["csr"] }
web-sys = "0.3.67"
yew-hooks = "0.3.0"
reqwest = {version = "0.11.4", features = ["json"] }
serde = "1.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
yew-router = "0.18.0"
